--- a/app.json
+++ b/app.json
@@ -4,13 +4,12 @@
     "slug": "native-react",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/icon.png",
+    "icon": "./assets/SplashScreen.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/SplashScreen.png",
+      "resizeMode": "contain"
     },
     "ios": {
       "supportsTablet": true
@@ -24,5 +23,6 @@
     "web": {
       "favicon": "./assets/favicon.png"
     }
+   
   }
 }
