--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "expo-status-bar": "~2.0.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
-    "react-native": "0.76.5"
+    "react-native": "0.76.5",
+    "react-native-element-dropdown": "^2.12.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
