--- a/app.json
+++ b/app.json
@@ -9,7 +9,7 @@
     "newArchEnabled": true,
     "splash": {
       "image": "./assets/SplashScreen.png",
-      "resizeMode": "contain"
+      "resizeMode": "cover"
     },
     "ios": {
       "supportsTablet": true
@@ -22,7 +22,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
-   
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
