--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
@@ -17,11 +18,19 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-native": "0.76.5",
-    "react-native-element-dropdown": "^2.12.2"
+    "react-native-element-dropdown": "^2.12.2",
+    "expo-router": "~4.0.15",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
+    "expo-linking": "~7.0.3",
+    "expo-constants": "~17.0.3",
+    "react-native-web": "~0.19.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "eslint": "^8.57.0",
+    "eslint-config-expo": "~8.0.1"
   },
   "private": true
 }
